# Huffman

./: CMakeLists.txt  huffman_testing.cpp  main.cpp
lib/: huffman.cpp  huffman.h  istream_cover.cpp  istream_cover.h  ostream_cover.cpp  ostream_cover.h
